session 2: add database and new docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,73 @@
 services:
-    node-app:
-        image: examplenode # This is the image we have built
+    traefik:
+        image: traefik:v3.3.3
+        command:
+            - "--configFile=/app/configs/traefik.toml" # This is the traefik configuration file
+        volumes:
+            - ./traefik/traefik.toml:/app/configs/traefik.toml:ro # We want to mount our local traefik.toml file
+            - ./traefik/dynamic_conf.toml:/app/configs/dynamic_conf.toml:ro # We want to mount our local dynamic_conf.toml file
+            - ./traefik/certs:/certs:ro # Remember to have the proper certificates here!
+            - /var/run/docker.sock:/var/run/docker.sock:rw
+        labels:
+            - "traefik.enable=true" # We enable traefik for this service
+            - "traefik.http.routers.traefik.rule=Host(`traefik.localhost`)" # This is the traefik service URL
+            - "traefik.http.routers.traefik.entrypoints=websecure" # We want to use websecure as entrypoint (HTTPS)
+            - "traefik.http.routers.traefik.tls=true" # Enable the HTTPS router
+            - "traefik.http.routers.traefik.service=api@internal" # This is just internal configuration
+        environment:
+            - TZ=Europe/Helsinki # Lets set the environment variable TZ to Europe/Helsinki
         ports:
-            - 3000:3000 # We want to open the port 3000 of the container and show it as port 3000 of the host
+            - "80:80" # Open port 80 to the outside world
+            - "443:443" # Open port 443 to the outside world
+        networks:
+            - cloud_project # And we use this network to connect to the other services
+    backend:
+        image: project-backend:dev # This is the image we have built. If missing, check build_docker_images.sh
+        volumes:
+            - ./backend:/usr/src/app # We want to mount our local backend folder to the container
+        # develop:  # https://github.com/oven-sh/bun/issues/5841#issuecomment-1985245340
+        #   watch:
+        #     - action: sync
+        #       path: ./backend
+        #       target: /usr/src/app
+        #     - action: rebuild
+        #       path: ./package.json
+        environment:
+            - POSTGRES_URL=postgres://user:password@postgres:5432/projectdb # This is the database URL
+        networks:
+            - cloud_project # Note the network is the same as for traefik! Otherwise this won't work!
+        #command: bun run dev # This is the command we want to run. We are now overriding the default command.
+        labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.backend.rule=Host(`backend.localhost`)" # This is the backend service URL
+            - "traefik.http.routers.backend.entrypoints=websecure"
+            - "traefik.http.routers.backend.tls=true"
+            - "traefik.http.services.backend.loadbalancer.server.port=3000"
+    postgres:
+      image: postgres:17.2
+      environment:
+          - TZ=Europe/Helsinki
+          - POSTGRES_USER=user
+          - POSTGRES_PASSWORD=password
+          - POSTGRES_DB=projectdb
+      volumes:
+          - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+          - ./db_data:/var/lib/postgresql/data
+      healthcheck: # Hey! We are checking that the postgres is up and running!
+          test: ["CMD-SHELL", "pg_isready -U user -d projectdb"]
+          interval: 10s
+          timeout: 5s
+          retries: 5
+      labels:
+          - "traefik.enable=true"
+          - "traefik.http.routers.postgres.rule=Host(`postgres.localhost`)"
+          - "traefik.http.routers.postgres.entrypoints=websecure"
+          - "traefik.http.routers.postgres.tls=true"
+          - "traefik.http.services.postgres.loadbalancer.server.port=5432"
+      networks:
+          - cloud_project
+
+networks:
+    cloud_project:
+        name: cloud_project # We are creating a network with the name cloud_project
+        driver: bridge # We are using the bridge driver
