Sessin 3: add ui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,28 +44,42 @@ services:
             - "traefik.http.routers.backend.tls=true"
             - "traefik.http.services.backend.loadbalancer.server.port=3000"
     postgres:
-      image: postgres:17.2
-      environment:
-          - TZ=Europe/Helsinki
-          - POSTGRES_USER=user
-          - POSTGRES_PASSWORD=password
-          - POSTGRES_DB=projectdb
-      volumes:
-          - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-          - ./db_data:/var/lib/postgresql/data
-      healthcheck: # Hey! We are checking that the postgres is up and running!
-          test: ["CMD-SHELL", "pg_isready -U user -d projectdb"]
-          interval: 10s
-          timeout: 5s
-          retries: 5
-      labels:
-          - "traefik.enable=true"
-          - "traefik.http.routers.postgres.rule=Host(`postgres.localhost`)"
-          - "traefik.http.routers.postgres.entrypoints=websecure"
-          - "traefik.http.routers.postgres.tls=true"
-          - "traefik.http.services.postgres.loadbalancer.server.port=5432"
-      networks:
-          - cloud_project
+        image: postgres:17.2
+        environment:
+            - TZ=Europe/Helsinki
+            - POSTGRES_USER=user
+            - POSTGRES_PASSWORD=password
+            - POSTGRES_DB=projectdb
+        volumes:
+            - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+            - ./db_data:/var/lib/postgresql/data
+        healthcheck: # Hey! We are checking that the postgres is up and running!
+            test: ["CMD-SHELL", "pg_isready -U user -d projectdb"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+        labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.postgres.rule=Host(`postgres.localhost`)"
+            - "traefik.http.routers.postgres.entrypoints=websecure"
+            - "traefik.http.routers.postgres.tls=true"
+            - "traefik.http.services.postgres.loadbalancer.server.port=5432"
+        networks:
+            - cloud_project
+    ui:
+        image: project-ui:dev # This is the image we have built. If missing, check build_docker_images.sh
+        volumes:
+            - ./ui:/usr/src/app # We want to mount our local ui folder to the container
+            - /usr/src/app/node_modules # A neat trick: We want to make sure the container node_modules does not get written by our local node_modules
+        networks:
+            - cloud_project # Note the network is the same as for traefik! Otherwise this won't work!
+        command: bun dev -- --host # We want to add the --host so that we can access the frontend from outside the container
+        labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.ui.rule=Host(`app.localhost`)" # This is the ui service URL
+            - "traefik.http.routers.ui.entrypoints=websecure"
+            - "traefik.http.routers.ui.tls=true"
+            - "traefik.http.services.ui.loadbalancer.server.port=5173"
 
 networks:
     cloud_project:
