--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,20 +38,25 @@ services:
             - "traefik.http.routers.auth.entrypoints=websecure"
             - "traefik.http.routers.auth.tls=true"
             - "traefik.http.services.auth.loadbalancer.server.port=3001"
-    ui:
-        image: project-ui:dev # This is the image we have built. If missing, check build_docker_images.sh
-        volumes:
-            - ./ui:/usr/src/app # We want to mount our local ui folder to the container
-            - /usr/src/app/node_modules # A neat trick: We want to make sure the container node_modules does not get written by our local node_modules
+    nginx:
+        image: project-nginx:prod # This is the image we have built for production. If missing, check build_production_images.sh
+        restart: always
+        command: /bin/sh -c /etc/nginx/init-prod.sh
         networks:
             - cloud_project # Note the network is the same as for traefik! Otherwise this won't work!
-        command: bun dev -- --host # We want to add the --host so that we can access the frontend from outside the container
+        depends_on:
+            - traefik
+            - backend
+            - processor
+        environment:
+            - SERVER_UI_NAME=app.localhost
+            - TZ=Europe/Helsinki
         labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.ui.rule=Host(`app.localhost`)" # This is the ui service URL
-            - "traefik.http.routers.ui.entrypoints=websecure"
-            - "traefik.http.routers.ui.tls=true"
-            - "traefik.http.services.ui.loadbalancer.server.port=5173"
+            - "traefik.http.routers.nginx.rule=Host(`app.localhost`)" # This is the nginx ui service URL
+            - "traefik.http.routers.nginx.entrypoints=websecure"
+            - "traefik.http.routers.nginx.tls=true"
+            - "traefik.http.services.nginx.loadbalancer.server.port=8904"
     backend:
         image: project-backend:dev # This is the image we have built. If missing, check build_images.sh
         volumes:
